--- a/main_page/static/main_page/home_page.css
+++ b/main_page/static/main_page/home_page.css
@@ -29,3 +29,25 @@
 .jumbotron {
 	padding: 2rem;
 }
+
+.inline {
+	display: inline;
+}
+
+.link-button {
+	background: none;
+	border: none;
+	color: blue;
+	text-decoration: underline;
+	cursor: pointer;
+	font-size: 1em;
+	font-family: serif;
+}
+
+.link-button:focus {
+	outline: none;
+}
+
+.link-button:active {
+	color:red;
+}
